--- a/publisa/templates/publisa/base.html
+++ b/publisa/templates/publisa/base.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load i18n %}
-{% block title %}{% trans 'Articles' %}{% endblock %}
+{% block title %}{% trans 'Published items' %}{% endblock %}
 {% block content_title %}
-<h1>Articles (<a href="{% url article-list %}">view all</a>)</h1>
+<h1>Published items (<a href="{% url article-list %}">view all</a>)</h1>
 {% endblock %}
