--- a/publisa/templates/publisa/publish_list.html
+++ b/publisa/templates/publisa/publish_list.html
@@ -1,4 +1,5 @@
 {% extends 'publisa/base.html' %}
+{% load publisa %}
 {% block content_title %}
 Listing all items that are published.
 {% endblock %}
@@ -6,9 +7,8 @@ Listing all items that are published.
 {% block content %}
 <ul>
 {% for p in publish_list %}
-<a href="{{ p.get_absolute_url }}">{{ p }}</a>
+    {% render_published p %}
 {% endfor %}
 </ul>
 {% if is_paginated %}{% load paginator %}{% paginator 3 %}{% endif %}
 {% endblock %}
-
